# pyo3-matrix-synapse-module

./: Cargo.toml
.github/workflows/: ci.yaml
demo/: .gitignore  Cargo.toml  pyproject.toml
demo/src/: lib.rs
src/: lib.rs
