[package]
name = "pyo3-matrix-synapse-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2"
http = "0.2"
http-body = "0.4"
pyo3 = "0.16"
pyo3-asyncio = { version = "0.16", feature = ["tokio-runtime"] }
pyo3-twisted-web = { git = "https://github.com/sandhose/pyo3-twisted-web.git" }
serde = "1"
serde_json = "1"
tower-service = "0.3"

[workspace]
members = ["demo"]
