[package]
name = "pyo3-matrix-synapse-module"
version = "0.1.1"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2021"
license = "Apache-2.0"
description = "Write Matrix Synapse modules in Rust"
repository = "https://github.com/sandhose/pyo3-matrix-synapse-module/"
rust-version = "1.56"
exclude = ["/.github", ".gitignore"]

[dependencies]
bytes = "1"
http = "0.2"
http-body = "0.4.4"
pyo3 = "0.17"
pyo3-asyncio = "0.17"
pyo3-twisted-web = "0.1.0"
serde = "1"
serde_json = "1"
serde_path_to_error = "0.1"
tower-service = "0.3"
tracing = "0.1.11"

[workspace]
members = ["demo"]
