[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "demo"
crate-type = ["cdylib"]

[dependencies]
bytes = "1.2"
http = "0.2"
pyo3 = { version = "0.16", features = ["extension-module"] }
pyo3-matrix-synapse-module = { path = "../" }
serde = { version = "1", features = ["derive"] }
tower = "0.4"
