[package]
name = "demo"
version = "0.1.1"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2021"
license = "Apache-2.0"
description = "A demo Synapse module using pyo3-matrix-synapse-module"
repository = "https://github.com/sandhose/pyo3-matrix-synapse-module/"
publish = false

[lib]
name = "demo"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
http-body = "0.4.4"
pyo3 = { version = "0.17", features = ["extension-module", "anyhow"] }
pyo3-asyncio = { version = "0.18", features = ["tokio-runtime"] }
pyo3-matrix-synapse-module = { path = "../" }
serde = { version = "1", features = ["derive"] }
tower = { version = "0.4", default-features = false }
tokio = { version = "1.21", features = ["time"] }
tokio-stream = { version = "0.1", features = ["time"] }
futures-util = "0.3"
hyper = { version = "0.14", features = ["stream"] }
